fixed sidebar scrolling broke main feed scrolling-cutoff

--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@ body, html {
     height: 100%;
     margin: 0;
     font-size: 18px;
+    overflow: hidden;
 }
 
 /*navbar styling*/
@@ -61,7 +62,7 @@ li div:hover {
 }
 
 li a:hover {
-    background-color: #111;
+    cursor: pointer;
 }
 
  li .userActions:hover {
@@ -93,47 +94,87 @@ li a:hover {
     padding: 0;
     margin-top: 3px;
 }
+/*end nav styling*/
 
 /* grid setup */
 .container {
-    width: 98%;
-    height: 92%;
+    width: 100%;
+    height: 100%;
     display: grid;
     grid-template-columns: 1fr 3fr 1fr;
-    grid-template-rows: 1fr 65fr;
+    grid-template-rows: 1fr 150fr;
     grid-template-areas: 'n n n'
                          'f a t';
     grid-gap: 5px;
     margin-top: -10px;
-    margin-left: 1%;
     margin-right: 1%;
 }
 
+/*left side friends bar, should be scrollable*/
 .friends {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
     grid-area: f;
-    border: 1px solid black;
+    border-right: .5px solid gray;
+    overflow-y: auto;
+    background-color: #969696;
 }
 
-/* allows scrolling through posts */
+.friends > h2, .topics > h2 {
+    padding: 0 25px;
+}
+
+.friends > ul, .topics > ul {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    list-style-type: none;
+    padding: 10px;
+    font-size: 1.2em;
+    background-color: transparent;
+    overflow-y: auto;
+}
+
+/* main post feed, should allow scrolling through posts */
 .feed {
     grid-area: a;
-    overflow-y: scroll;
+    overflow-y: auto;
+    display: flex;
+    flex-direction: column;
+    margin: 5px;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+/*right side bar listing topics, should be scrollable*/
+.topics{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    grid-area: t;
+    border-left: .5px solid gray;
+    overflow-y: auto;
+    background-color: #969696;
+}
+
+/*post containers*/
+.post {
+    min-height: max-content;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-}
-
-.topics{
-    grid-area: t;
-    border: 1px solid black;
+    width: 97%;
+    margin: 5px;
+    padding: 10px;
+    border-radius: 5px;
+    border: .5px solid gray;
 }
 
 .postContent {
-    width: 97%;
-    border: 1px solid black;
-    padding: 10px;
-    margin: 10px;
+    width: 100%;
+    padding: 5px;
 }
 
 .postContent > img {
@@ -151,4 +192,23 @@ li a:hover {
 
 .postContent > p {
     clear: left;
+}
+
+.comment {
+    width: 90%;
+    align-self: flex-start;
+    height: 75px;
+}
+
+.comment > img {
+    float: left;
+    width: 50px;
+    height: 50px;
+    padding-right: 15px;
+}
+
+.comment > textarea {
+    height: 45px;
+    width: 80%;
+    float: left;
 }
